--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-slate
-title: RDGFB TEST PAGE
+title: rdgfb test page
+description: this will have tons of stuff to test. remember that everything can break suddenly!!
